# bd_project

./: app.py  ordered_products.json  pyproject.toml  requirements.txt
bd_project/: __init__.py  classes.py  config.py  models.py
bd_project/DB/: project.db
bd_project/admin/: routes.py  user_forms.py  utils.py
bd_project/admin_couriers_table/: forms.py  routes.py  utils.py
bd_project/admin_products_table/: forms.py  routes.py  utils.py
bd_project/admin_users_table/: forms.py  routes.py  utils.py
bd_project/couriers/: forms.py  routes.py
bd_project/main/: forms.py  routes.py
bd_project/static/: main.css
bd_project/templates/: account.html  current_orders.html  home.html  layout.html  login.html  login_courier.html  order.html  product_revives.html  register.html  reset_request.html  reset_token.html
bd_project/templates/admin_pages/: admin.html  table_couriers.html  table_orders.html  table_products.html  table_users.html
bd_project/users/: forms.py  routes.py  utils.py
